<?xml version="1.0"?>
<package>
  <name>infinitam</name>
  <version>0.0.0</version>
  <description>The model_fitting package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <author>Fadri Furrer</author>
  <license>TODO</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>librealsense</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>librealsense</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
