<?xml version="1.0"?>
<package format="2">
  <name>infinitam</name>
  <version>0.0.0</version>
  <description>The model_fitting package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="gocarlos@mavt.ethz.ch">Carlos Gomes</maintainer>
  <author>Fadri Furrer</author>
  <author>Carlos Gomes</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <!--<depend>librealsense</depend>-->

  <export>
  </export>
</package>
